<resources>
    <string name="app_name">Simple To Do</string>
    <string name="header">MY TO DO LIST</string>
    <string name="hello">hello</string>
    <string-array name="spinnerItems">
        <item>Add a new task</item>
        <item>Remove a task</item>
    </string-array>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="clear">CLEAR</string>
    <string name="subheader">Get those done soon</string>
</resources>