<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/hello"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingBottom="15dp"
            android:text="What's up for today?"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tvToDoList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/subheader" />

        <ListView
            android:id="@+id/listViewTasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerItems"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="25dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/clear" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>